@@ -226,7 +226,7 @@ setup_paths ()
 
   /* Adding mf/out make lilypond unchanged source directory, when setting
      LILYPONDPREFIX to lilypond-x.y.z */
-  char *suffixes[] = {"ly", "afm", "mf/out", "scm", "tfm", "ps", 0};
+  char *suffixes[] = {"ly", "otf", "mf/out", "scm", "tfm", "ps", 0};
 
   for (unsigned i = 0; prefix_directory[i]; i++)
     for (char **s = suffixes; *s; s++)
